# CLI-RPG

./: .gitignore  CLI-RPG.sln  CMakeLists.txt  CMakePresets.json  LICENSE.MIT  Makefile  README.md  main.cpp
include/: Attributes.hpp  ConsoleUtils.hpp  CreationMenu.hpp  Game.hpp  Hero.hpp  InitialMenu.hpp  Item.hpp  Location.hpp  Npc.hpp  StartMenu.hpp  UserInterface.hpp  Village.hpp
include/entities/: Attributes.hpp  Hero.hpp  Item.hpp  Npc.hpp
include/exceptions/: CorruptedDataException.hpp  CorruptedSaveGameException.hpp  EmptySaveFolderException.hpp  WorldObjectException.hpp
include/global/: DependencyInjector.hpp  Text.hpp  World.hpp
include/locations/: Location.hpp  Village.hpp
include/persistence/: Data.hpp  JsonData.hpp  SaveGame.hpp  SaveGameJson.hpp  SaveHero.hpp  SaveHeroJson.hpp  SaveInventory.hpp  SaveInventoryJson.hpp  SaveLocation.hpp  SaveLocationJson.hpp  TextData.hpp  TextJson.hpp
include/ui/: AttributesDefinition.hpp  CreationMenu.hpp  Game.hpp  StartMenu.hpp  UserInterface.hpp
include/utils/: ConsoleUtils.hpp  SaveManager.hpp  Utility.hpp
res/language/: en.json
res/localization/: en.json
src/: main.cpp
src/entities/: Attributes.cpp  Hero.cpp  Item.cpp  Npc.cpp
src/exceptions/: CorruptedDataException.cpp  CorruptedSaveGameException.cpp  EmptySaveFolderException.cpp  WorldObjectException.cpp
src/global/: DependencyInjector.cpp  Text.cpp  World.cpp
src/locations/: Location.cpp  Village.cpp
src/persistence/: JsonData.cpp  SaveGame.cpp  SaveGameJson.cpp  SaveHero.cpp  SaveHeroJson.cpp  SaveInventory.cpp  SaveInventoryJson.cpp  SaveLocation.cpp  SaveLocationJson.cpp  TextJson.cpp
src/ui/: AttributesDefinition.cpp  CreationMenu.cpp  Game.cpp  InitialMenu.cpp  StartMenu.cpp  UserInterface.cpp
src/utils/: ConsoleUtils.cpp  SaveManager.cpp  Utility.cpp
